--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cannon": "^0.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "react-three-fiber": "^1.5.3",
-    "three": "^0.103.0"
+    "react-redux": "^7.0.3",
+    "react-scripts": "3.0.1",
+    "react-three-fiber": "^2.1.1",
+    "redux": "^4.0.1",
+    "three": "^0.104.0"
   },
   "scripts": {
     "start": "react-scripts start",
