--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "^8.0.5",
     "cannon": "^0.6.2",
     "codemirror": "^5.46.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
