--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Custom
+build/
 
 # Created by https://www.gitignore.io/api/osx,vim,node,linux,macos,windows,intellij+all
 # Edit at https://www.gitignore.io/?templates=osx,vim,node,linux,macos,windows,intellij+all
