--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "cannon": "^0.6.2",
     "codemirror": "^5.46.0",
     "gh-pages": "^2.0.1",
+    "highlight.js": "^9.15.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highlight": "^0.12.0",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "react-three-fiber": "^2.1.1",
@@ -21,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	 "publish": "gh-pages -d build"
+    "publish": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
